[project]
name = "snake-rl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cuda-cupti-cu12>=12.9.79",
    "nvidia-cuda-nvcc-cu12>=12.9.86",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.22.0.52",
    "nvidia-cufft-cu12>=11.4.1.4",
    "nvidia-cusolver-cu11>=11.4.1.48",
    "nvidia-cusolver-cu12>=11.7.5.82",
    "nvidia-nvtx-cu12>=12.9.79",
    "tensorflow>=2.0.0",
]
